Memory configuration documentation / issue #66